Modification des fichiers

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,8 +3,8 @@ body {
     padding: 0;
     width: 100%;
     box-sizing: border-box;
-        font-size: 16px;
-        font-family: Arial, Helvetica, sans-serif
+    font-size: 16px;
+    font-family: Arial, Helvetica, sans-serif
 }
 
 header {
@@ -93,27 +93,28 @@ nav ul a:hover {
 #services h2 {
    font-size: 35px;
    text-align: center;
-   margin-top: 40px;
+   margin-top: 30px;
 }
 
 .container {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    margin: 0;
+    padding: 0;
 }
-.service {
-    margin-top: 50px;
-    width: 32%;
+.service { 
     display: flex;
     align-items: center;
     flex-direction: column;
     border-radius: 8px;
-    margin-bottom: 10px;
+     margin: 12px;
+    padding: 0;
     box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.5);
 }
 .service img {
   width: 30%;
-   margin-top: 30px; 
+   margin-top: 20px; 
  
 }
 .service h3 {
@@ -123,6 +124,8 @@ nav ul a:hover {
 }
 .service p {
     line-height: 1.4;
+    font-size: 18px;
+    width: 90%;
 }
 
 #a_propos {
@@ -136,7 +139,7 @@ nav ul a:hover {
     text-align: center;
 }
 
-#a_propos .container {
+#a_propos .div_container {
     width: 90%;
     margin: 0 auto;
     display: flex;
@@ -189,6 +192,7 @@ nav ul a:hover {
     background-color: #F5F5F5;
     border-radius: 8px;
     margin-bottom: 10px;
+    height: 160px;
     box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.5);
 }
 
@@ -242,17 +246,17 @@ nav ul a:hover {
     display: flex;
     align-items: center;
     justify-content: space-between; 
+    margin: auto;
+    margin-bottom: 30px;
 }
 
 form {
     display: flex;
     align-self: flex-start;
     flex-direction: column;
-    width: 90%;
-    height: 400px;
+    width: 50%;
     margin: 0 auto;
     padding: 0px;
-    margin-right: 10px;
 }
 
 form input {
@@ -277,7 +281,6 @@ form label {
 }
 
 .textarea textarea {
-    margin-top: 5px;
     border: 1px solid #8C9CA4;
     box-shadow: 1px 1px 1px #8C9CA4;
     background: transparent;
@@ -290,7 +293,7 @@ form label {
     height: 72%; 
 }
 
-form button {
+#btn{
     cursor: pointer;
     font-size: 15px;
     padding: 15px 25px;
@@ -302,18 +305,18 @@ form button {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 87%;
-    margin-top: 70px;
-    margin-left: 10px;
+    width: 87.5%;
+    margin-top: 30px;
 }
 
 .maps {
     margin-top: 20px;
     width: 50%;
     display: flex;
-    align-items: center;
-    justify-content: flex-end;
+    align-items: flex-end;
     flex-direction: column;
+    
+    padding-right: 12px;
 }
 
 .adressse_tel {
@@ -346,6 +349,7 @@ footer div {
     justify-content: center;
 }
 
+
 footer img {
     width: 20%;
     height: 10%;
@@ -370,7 +374,6 @@ footer img {
 
     .service {
         margin: 0;
-        padding: 10px;
         font-size: 16px;
         margin-left: 10px;
         height: 200px;
@@ -534,16 +537,24 @@ footer img {
         text-align: center;
     }
 
-    #a_propos .container{
+    #a_propos .div_container{
         display: flex;
         align-content: center;
         justify-content: center;
         flex-direction: column;
         margin: 0;
+        width: 100%;
+    }
+    .gauche {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+
     }
 
     .gauche p {
-        font-size: 20px;
+        font-size: 16px;
         text-align: justify;  
         margin: 0;
     }
@@ -555,7 +566,7 @@ footer img {
     }
 
     .droit img {
-        width:220px;
+        width: 280px;
     }
 
     #temoignages {
@@ -576,6 +587,7 @@ footer img {
         justify-content: center;
         flex-direction: column;
         margin: 0;
+        margin-bottom: 10px;
         padding: 0;
     }
 
@@ -610,6 +622,7 @@ footer img {
     #contact h2 {
         font-size: 24px;
         text-align: center;
+        margin: 0;
     }
 
     .form_box {
@@ -617,32 +630,55 @@ footer img {
         align-items: center;
         justify-content: center;
         flex-direction: column;
+        width: 100%;
     }
 
     form {
+        margin: 0;
+        width: 100%;
         display: flex;
         justify-content: center;
+        align-items: center;
+    }
+    form div {
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        width: 80%;
     }
 
-    form button {
+    form label {
+       display: flex;
+       align-items: flex-start;
+       flex-direction: column;
+    }
+    form input {
+        display: flex;
+        align-items: center;
+        
+    }
+    .textarea {
+        width: 80%;
+    }
+
+    #btn {
         display: flex;
         align-items: start;
         justify-content: center;
+        width: 75%;
+        margin: 0;
+        margin-top: 10px;
     }
 
     .maps {
+        width: 80%;
         display: flex;
         align-items: center;
         justify-content: center;
         text-align: center;
         margin: 0;
+        margin-top: 20px;
         padding: 0;
-        margin-top: 50px;
-    }
-
-    iframe {
-        width: 150%;
-        height: 200px;
     }
 
     .adressse_tel {
@@ -659,6 +695,8 @@ footer img {
         align-items: center;
         justify-content: center;
         flex-direction: column;
+        padding: 10px;
+        margin: 0;
     }
 
      .toggle_menu {
@@ -796,7 +834,7 @@ footer img {
         text-align: center;
     }
 
-    #a_propos .container {
+    #a_propos .div_container {
         display: flex;
         align-content: center;
         justify-content: center;
